# re

Keyword_Bot/: Pipfile  bot.py
NikeImageBot/: .env  NikeImgMaker.py  nike-image-bot.py  requirments.txt  test.desktop
OpenSea/: .env  main.py  requirements.txt
asos_scraper/: asos_monitor_mongo.py  asos_urlmonitor_mongo.py
ebay discord webhook bot v1.1.0/: README.md  app.py  config.json  data.json  proxies.txt
facebook_photo_scraper/: config.json  facebook_photo_scraper.py  photo_urls.txt  proxies_old.txt  response.html
footasylum_scraper/: footasylum_monitor_mongo.py  footasylum_urlmonitor_mongo.py
footlocker_calendar_scraper/: config.json  footlocker_calendar_scraper.py  log.py  logs.txt
footlocker_uk_monitor/: footlockeruk_monitor_mongo.py  footlockeruk_urlmonitor_mongo.py
instagram_scraper_new/: ig_offspring_mongo.py  ig_post_hashtag_mongo.py  ig_tagged_story_mongo.py  instagram_offspring_scraper.py  instagram_scraper_post_hashtag.py  instagram_scraper_tagged_story.py  post hashtag.sh  start_tagged.sh  utils.py
jdsports_scraper/: jdsportsuk_monitor_mongo.py  jdsportsuk_urlmonitor_mongo.py
nikestore_scraper/: cfscrape  nikestore_monitor_mongo.py  nikestore_urlmonitor_mongo.py  requirements.txt
offspring-ig-bot/: .env  dm-messagebird-bot.py  keywords.txt  requirments.txt
offspring_scraper/: Offspring.sh  offspring_monitor_mongo.py  offspring_urlmonitor_mongo.py  (+1 more)
spyros_twitter/: bot.py  errors.txt  pyproject.toml  utils.py
spyros_twitter/DATA/: Database.py  TOKEN.txt  bot.db  schema.sql
spyros_twitter/cogs/: Events.py  Set-up.py  misc.py
(+101 files in other folders)
